нашла ошибки, исправила

--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} 
 
-{% block title %} Последние обновления на сайте {% endblock title %}
+{% block title %} Последние обновления на сайте {% endblock %}
 
 {% block content %}
 
@@ -17,7 +17,7 @@
             </ul>
             <p>{{ post.text }}</p>    
               {% if post.group %}   
-                <a href="{% url 'posts:post' post.group.slug %}">все записи группы</a>
+                <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
               {% endif %}
             {% if not forloop.last %}<hr>{% endif %}
           {% endfor %} 
